opa-policies/require-probes.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: requireprobes
spec:
  crd:
    spec:
      names:
        kind: RequireProbes
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package requireprobes
        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          not container.readinessProbe
          msg := sprintf("Container '%v' must define a readinessProbe", [container.name])
        }
